syntax = "proto3";

package skillsdemo;
option go_package = "rpc/survey";

service Survey {
    rpc CreateSurvey(CreateSurveyReq) returns (SurveyResp);
    rpc UpdateSurveyStatus(SurveyStatusReq) returns (SurveyResp);
    rpc UpdateAppointmentStatus(AppointmentStatusReq) returns (FeedbackResp);
    rpc GetFeedback(IdReq) returns (FeedbackResp);
}

enum SurveyStatus {
    unpublished = 0;
    active = 1;
    archived = 2;
}

enum MeasureType {
    freeform = 0;
    range = 1;
    boolean = 2;
    enumeration = 3;
    multiflag = 4;
}

message IdReq {
    string id = 1;
}

message MeasureRange {
    int32 low_range = 1;
    int32 high_range = 2;
}

message MeasureBoolean {
    string bool_true = 1;
    string bool_false = 2;
}

message MeasureEnum {
    int32 value = 1;
    string label = 2;
}

message MeasureFlags {
    string label = 1;
}

message SurveyResp {
    string id = 1;
    string title = 3;
    optional string description = 4;
    SurveyStatus status = 5;
    repeated Prompt prompts = 6;
}

message CreateSurveyReq {
    string title = 1;
    optional string description = 2;
    SurveyStatus status = 3;
    repeated CreatePrompt prompts = 4;
}

message PendingFeedbackReq {
    string appointment_id = 1;
    string title = 2;
    optional string description = 3;
    SurveyStatus status = 4;
    repeated Prompt prompts = 5;
}

message SurveyStatusReq {
    string id = 1;
    SurveyStatus status = 2;
}

message CreatePrompt {
    int32 index = 1;
    string title = 2;
    string description = 3;
    Measure response_type = 4;
    bool allow_additional_feedback = 5;

}

message Prompt {
    string id = 1;
    int32 index = 2;
    string title = 3;
    string description = 4;
    Measure response_type = 5;
    bool allow_additional_feedback = 6;
}

message Measure {
    MeasureType type = 1;
    MeasureRange range = 2;
    MeasureBoolean boolean = 3;
    repeated MeasureEnum enumeration = 4;
    repeated MeasureFlags flags = 5;

}

message AppointmentStatusReq {
    string id = 1;
    string status = 2;
}

message FeedbackResp {
    string id = 1;
    string status = 2;
    repeated FbResponses responses = 3;
}

message FbResponses {
    string id = 1;
    string parsed_template = 2;
    int32 survey_index = 3;
    string status = 4; //new or complete - relates to the completion time from the db
    MeasureType type = 5;
    MeasureRange range = 6;
    MeasureBoolean boolean = 7;
    MeasureEnum enumeration = 8;
    string freeform_value = 9;
    repeated MeasureFlags flags = 10;
}